--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,34 @@ body {
     text-wrap: balance;
   }
 }
+
+.beta-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  backface-visibility: hidden;
+}
+
+.beta-container {
+  position: relative;
+  width: 33.3333%;
+  float: left;
+}
+
+.beta-middle {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  width: 0px;
+  height: 0px;
+}
+
+.beta-container:hover .beta-middle {
+  opacity: 1;
+  width: 100%;
+  height: auto;
+}
