Add wallet connection

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,12 @@ body {
   width: 100%;
   height: auto;
 }
+/* 
+.wallet-adapter-button{
+  color: white !important;
+}
+
+.wallet-adapter-button:hover {
+ border: 2px solid grey !important;
+ color: white !important;
+} */
